feat: 45% code coverage